GNOME Bugzilla – Bug 683264
gsth264parser: fix Coverity found not initialized sps/pps valid member.
Last modified: 2012-09-14 10:19:26 UTC
Attached patch fixes Coverity found not initialized sps/pps valid members in gsth264praser. Second patch shows where the parsing result of sps/pps is not checked for error the case.
Created attachment 223285 [details] [review] gsth264parser: fix Coverity found not initialized sps/pps valid member.
Created attachment 223286 [details] [review] gsth264parse: add comment where return should be checked.
commit 1af3833f1325b67e3b017c5b1c0c3c26324189c8 Author: Peter Seiderer <ps.report@gmx.net> Date: Mon Sep 3 13:58:22 2012 +0200 gsth264parse: add comment where return should be checked. Fixes https://bugzilla.gnome.org/show_bug.cgi?id=683264 commit a73957e01a8ea435dfb60e9949536e26997fd147 Author: Peter Seiderer <ps.report@gmx.net> Date: Mon Sep 3 13:43:03 2012 +0200 gsth264parser: fix Coverity found not initialized sps/pps valid member. Fixes https://bugzilla.gnome.org/show_bug.cgi?id=683264