gsth264parser: fix Coverity found not initialized sps/pps valid member.

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=683264